force-app/main/default/objects/ProcessTemplateLine__c/ProcessTemplateLine__c.object-meta.xml
<CustomObject>
    <label>Template Line</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Template Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Line</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>