force-app/main/default/objects/ProcessTemplateLine__c/fields/CheckListAction__c.field-meta.xml
<CustomField>
    <fullName>CheckListAction__c</fullName>
    <label>Check List Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get new email</fullName>
            </value>
            <value>
                <fullName>Get laptop</fullName>
            </value>
            <value>
                <fullName>Get Stationary</fullName>
            </value>
            <value>
                <fullName>Sign contract</fullName>
            </value>
            <value>
                <fullName>Participate &quot;Chương trình hội nhập&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>