force-app/main/default/objects/ProcessTemplateLine__c/fields/Next_Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Application_Stage__c</fullName>
    <label>Next Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Stage</valueSetName>
    </valueSet>
</CustomField>