force-app/main/default/objects/ProcessTemplateLine__c/fields/PIC_user__c.field-meta.xml
<CustomField>
    <fullName>PIC_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Template_Line</relationshipName>
    <type>Lookup</type>
</CustomField>