force-app/main/default/objects/ProcessTemplateLine__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Recruitment Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProcessTemplate</valueSetName>
    </valueSet>
</CustomField>