force-app/main/default/objects/ProcessTemplateLine__c/fields/ProcessTemplate__c.field-meta.xml
<CustomField>
    <fullName>ProcessTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Check List</value>
        </filterItems>
        <filterItems>
            <field>ProcessTemplate__c.TypeofProcess__c</field>
            <operation>equals</operation>
            <value>Check List</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Recruitment Process</value>
        </filterItems>
        <filterItems>
            <field>ProcessTemplate__c.TypeofProcess__c</field>
            <operation>equals</operation>
            <value>Recruitment Process</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProcessTemplate__c</referenceTo>
    <relationshipLabel>Template Line</relationshipLabel>
    <relationshipName>Template_Line</relationshipName>
    <type>Lookup</type>
</CustomField>