force-app/main/default/objects/ProcessTemplateLine__c/fields/Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Formula__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type (Formula)</label>
    <type>Text</type>
</CustomField>