force-app/main/default/objects/ProcessTemplateLine__c/recordTypes/Check_list.recordType-meta.xml
<RecordType>
    <fullName>Check_list</fullName>
    <active>true</active>
    <label>Check List</label>
</RecordType>