force-app/main/default/objects/ProcessTemplateLine__c/recordTypes/Recruitment_Process.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_Process</fullName>
    <active>true</active>
    <label>Recruitment Process</label>
</RecordType>